[metadata]
name = stvid
version = 0.1
description =  Satellite tracking with video cameras
long_description = file: README.md
long_description_content_type = text/markdown
author = Cees Bassa
license = GPLv3
license_file = LICENSE
platforms = any
classifiers =
    Programming Language :: Python :: 3 :: Only
project_urls =
    Source = https://github.com/cbassa/stvid
    Bug Tracker = https://github.com/cbassa/stvid/issues

[options]
packages = find:
install_requires =
    astropy~=5.1
    cycler~=0.11.0
    kiwisolver~=1.0.1
    matplotlib~=3.5.3
    numpy~=1.23.2
    pyparsing~=2.2.0
    python-dateutil~=2.8.2
    pytz~=2022.2.1
    scipy~=1.9.1
    six~=1.16.0
    spacetrack~=0.13.7
    termcolor~=1.1.0

[options.packages.find]
where = .
include = stvid*

[options.entry_points]
console_scripts =
    acquire = stvid.cli.acquire:main
    imgstat = stvid.cli.imgstat:main
    keogram = stvid.cli.keogram:main
    process = stvid.cli.process:main
    update_tle = stvid.cli.update_tle:main

[options.extras_require]
asi =
    zwoasi~=0.1.0.1
    opencv-python~=4.6.0.66
picamera =
    picamerax~=21.9.8
    opencv-python~=4.6.0.66
cv =
    opencv-python~=4.6.0.66

[flake8]
max-complexity = 25
max-line-length = 99
ignore = F403, W504, E226, W503
